--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.17.2",
     "install": "^0.13.0",
+    "node-fetch": "2.0.0",
     "pretty-quick": "^3.1.3"
   },
   "devDependencies": {
