--- a/package.json
+++ b/package.json
@@ -4,17 +4,28 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "prepare": "husky install .husky"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^12.0.4",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.8",
     "node-fetch": "2.0.0",
-    "pretty-quick": "^3.1.3"
+    "node-gyp": "^8.4.1",
+    "nodemailer": "^6.7.2",
+    "pretty-quick": "^3.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "husky": "^7.0.4",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
   },
   "husky": {
